--- a/ReactBack/JwtTodo/pom.xml
+++ b/ReactBack/JwtTodo/pom.xml
@@ -40,6 +40,17 @@
 			<artifactId>mybatis-spring-boot-starter</artifactId>
 			<version>2.3.2</version>
 		</dependency>
+		
+		
+		
+		<!-- https://mvnrepository.com/artifact/org.bgee.log4jdbc-log4j2/log4jdbc-log4j2-jdbc4.1 -->
+		<dependency>
+		    <groupId>org.bgee.log4jdbc-log4j2</groupId>
+		    <artifactId>log4jdbc-log4j2-jdbc4.1</artifactId>
+		    <version>1.16</version>
+		</dependency>
+		
+		
 
 		<dependency>
 			<groupId>org.mariadb.jdbc</groupId>
