--- a/ReactBack/JwtTodo/src/main/resources/application.properties
+++ b/ReactBack/JwtTodo/src/main/resources/application.properties
@@ -2,9 +2,14 @@ spring.application.name=JwtTodo
 
 server.port=80
 
+# log level
+# trace > debug > info > warn > fatal
+logging.level.root = info
+
+
 #db connection
-spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-spring.datasource.url=jdbc:mariadb://localhost:3306/mydb
+spring.datasource.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
+spring.datasource.url=jdbc:log4jdbc:mariadb://localhost:3306/mydb
 spring.datasource.username=web_user
 spring.datasource.password=pass
 
