파일 업로드(저장은 아직 안함)

--- a/ReactBack/11_Board_YJS/src/main/resources/application.properties
+++ b/ReactBack/11_Board_YJS/src/main/resources/application.properties
@@ -17,3 +17,8 @@ spring.datasource.hikari.maximum-pool-size=1
 spring.datasource.hikari.connection-timeout=30000
 spring.datasource.hikari.idle-timeout=600000
 spring.datasource.hikari.max-lifetime=1800000
+
+# file-size
+spring.servlet.multipart.max-file-size= 50MB
+spring.servlet.multipart.max-request-size= 500MB
+spring.servlet.multipart.location=C:/upload
