--- a/ReactBack/11_Board_YJS/src/main/resources/application.properties
+++ b/ReactBack/11_Board_YJS/src/main/resources/application.properties
@@ -22,3 +22,9 @@ spring.datasource.hikari.max-lifetime=1800000
 spring.servlet.multipart.max-file-size= 50MB
 spring.servlet.multipart.max-request-size= 500MB
 spring.servlet.multipart.location=C:/upload
+
+# post data max = 2MB
+# <Connector maxPostSize = "-1"/>
+server.tomcat.max-http-form-post-size=-1
+
+
