--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,5 @@ mvn*
 Boot/FileServer/
 NextJS/15_editor/public/richtexteditor/
 NextJS/16_editor_board/public/richtexteditor/
+NextJS/19_board/public/richtexteditor/rte.js
+NextJS/19_board/public/richtexteditor/
