--- a/JPA/08_Relation/src/main/resources/application.properties
+++ b/JPA/08_Relation/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=08_Relation
+server.port=80
 
 # db connect infomation
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
