--- a/JPA/09_PhotoBoard/src/main/resources/application.properties
+++ b/JPA/09_PhotoBoard/src/main/resources/application.properties
@@ -22,6 +22,7 @@ spring.mvc.view.suffix=.jsp
 #file
 spring.servlet.multipart.max-request-size = 500MB
 spring.servlet.multipart.max-file-size = 50MB
+spring.servlet.multipart.location=C:/upload
 
 #post data max = 2MB
 server.tomcat.max-http-form-post-size = -1
